--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/159/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/159/index.mdx
@@ -8,13 +8,11 @@ unlisted: true
 
 Salut à tous !
 
-React Advanced:
+Cette semaine, les runtimes sont a l'honneur. On va bien sur parler de Bun et de Static Hermes.
 
-- [Turbo 8 is dropping TypeScript](https://world.hey.com/dhh/turbo-8-is-dropping-typescript-70165c01)
+Je vous épargne les débats agités sur Twitter cette semaine 😅 on va rester sur du positif.
 
-- 👥 [React Advanced](https://reactadvanced.com/?utm_source=email&utm_medium=thisweekinreact) (Londres 🇬🇧, 20-23 Octobre) nous offre [-10% - code "REACT10"](https://ti.to/gitnation/react-advanced-london-2023/discount/REACT10)
-
-<Todo />
+Pour les experts React, allez faire un tour à [React Advanced](https://reactadvanced.com/?utm_source=email&utm_medium=thisweekinreact) à Londres du 20 au 23 Octobre ([-10% - code "REACT10"](https://ti.to/gitnation/react-advanced-london-2023/discount/REACT10)).
 
 <!-- truncate -->
 
@@ -47,12 +45,44 @@ Unlock enterprise-grade features, functions, and UI components completely free f
 
 ## ⚛️ React {#react}
 
-- [Next Nav](https://www.next-nav.com/) ?
+[![Bun 1.0](/emails/issues/159/bun.jpg)](https://bun.sh/blog/bun-v1.0)
+
+[**Bun 1.0**](https://bun.sh/blog/bun-v1.0)
+
+Impossible de passer à côté cette semaine: Bun vient de sortir en version 1.0 stable. Cette nouvelle n'est pas directement liée à React, mais elle affectera sans conteste notre écosystème au même titre que Node.js.
+
+Bun est une toolchain complète pour JavaScript et TypeScript basée sur Webkit et écrite en Zig. Bun est une nouvelle alternative ultra rapide à tout un tas d'outils frontends qu'on utilise aujourd'hui: Node.js, npx, Babel, esbuild, swc, webpack, Jest, Vitest, npm, Yarn, pnpm...
+
+La compatibilité avec les outils existants facilite l'adoption. Bun est généralement capable de faire tourner votre code existant tel quel, sans aucun changement (sinon, c'est [🐦 considéré comme un bug](https://twitter.com/jarredsumner/status/1700497869160268155)). Les frameworks React comme Next.js, Remix et Astro sont supportés.
+L'utiliser en remplacement de npm/Yarn/pnpm ou Jest/Vitest est sans doute un bon point d'entrée et ne présente pas trop de risques.
+
+- 📣 [Vercel - Bun install is now supported with zero configuration](https://vercel.com/changelog/bun-install-is-now-supported-with-zero-configuration)
+- 👀 [React-Native CLI PR - support Bun in init command](https://github.com/react-native-community/cli/pull/2073)
+- 🐦 [Bun console supports JSX](https://twitter.com/jarredsumner/status/1701499357080736047)
+- 🐦 [Bun + create-expo-app = 12x faster init](https://twitter.com/notbrent/status/1701044351177244790)
+- 📜 [Matteo Collina - My thoughts on Bun and other Adventures](https://adventures.nodeland.dev/archive/my-thoughts-on-bun/)
+- 📦 [Marz - A Fast and Lightweight React Server Components Framework for Bun](https://github.com/hex2f/marz)
+- 🎥 [Official launch video - Bun 1.0 is here](https://www.youtube.com/watch?v=BsnCpESUEqM)
+- 🎥 [Fireship - Bun is disrupting JavaScript land](https://www.youtube.com/watch?v=dWqNgzZwVJQ)
+- 🎥 [Lee Robinson - My thoughts on Bun](https://www.youtube.com/watch?v=z_66kDwxwBI)
+
+---
+
+- 💸 [Zero To Shipped - Master Fast-Paced Fullstack Development and **Finally** ship that product](https://www.zerotoshipped.com/)
+- 👀 [React.gg](https://react.gg/) et [The Joy of React](https://www.joyofreact.com/): les 2 cours React les plus attendus de l'année viennent de sortir!
+- 📦 [Ariakit React 0.3](https://github.com/ariakit/ariakit/releases/tag/@ariakit/react@0.3.0)
+- 📦 [Next Admin - Full-featured admin for Next.js and Prisma](https://github.com/premieroctet/next-admin)
+- [Overcoming application complexity with customized Flows](https://www.40seas.com/blog/overcoming-application-complexity-with-customized-flows) ???
+- 📦 [React Aria Components - Now in beta](https://react-spectrum.adobe.com/releases/2023-09-07.html) + https://twitter.com/devongovett/status/1700170504039260437
+- [Next.js, just why?](https://pilcrow.vercel.app/blog/nextjs-why)
+- [Next.js - Redesigned console output](https://twitter.com/leeerob/status/1701775526459756620)
+- [Painting with Math: A Gentle Study of Raymarching](https://blog.maximeheckel.com/posts/painting-with-math-a-gentle-study-of-raymarching/)
+- [RedwoodJS - Support for React Server Actions](https://community.redwoodjs.com/t/react-server-components-rsc/5081/7)
+- 📦 [Next Nav](https://www.next-nav.com/) ?
 - [Automatic visual tests in Storybook, plus 2.2x faster build times for React+TS](https://storybook.js.org/blog/automatic-visual-tests-plus-2x-faster-react-ts/)
 - [Scaling frontend app teams using Relay](https://hasura.io/blog/scaling-frontend-app-teams-using-relay/)
 - [A Wide View of Automated Testing in React Apps](https://reacthandbook.dev/automated-testing)
 - [Styling React Select with Tailwind](https://www.jussivirtanen.fi/writing/styling-react-select-with-tailwind)
-- 💸 [Zero To Shipped - Master Fast-Paced Fullstack Development and **Finally** ship that product](https://www.zerotoshipped.com/)
 - 👥 [reactjsday](https://2023.reactjsday.it/) (Verone 🇮🇹, 27 Octobre) nous offre [-10% - code "media_TWIR"](https://ti.to/grusp/reactjsday-2023/discount/media_TWIR)
 - 👥 [React Advanced](https://reactadvanced.com/?utm_source=email&utm_medium=thisweekinreact) (Londres 🇬🇧, 20-23 Octobre) nous offre [-10% - code "REACT10"](https://ti.to/gitnation/react-advanced-london-2023/discount/REACT10)
 
@@ -76,8 +106,31 @@ It is super easy to install in your favorite framework: [React.js,](https://www
 
 ## 📱 React-Native {#react-native}
 
+[Static Hermes - How to speed up a micro-benchmark by 300x Without Cheating](https://tmikov.blogspot.com/2023/09/how-to-speed-up-micro-benchmark-300x.html)
+
+OTA: https://twitter.com/mdj_dev/status/1700424775116493053
+
+https://twitter.com/jamonholmgren/status/1700054607626428544
+
+Slides: https://twitter.com/tmikov/status/1700353858763911570
+
+---
+
 - 💸 [Blitz - Build React Native Apps Faster for iOS, Android, and Web!](https://www.blitz-rn.com/)
-- Hermes thread: https://twitter.com/jamonholmgren/status/1700054607626428544
+- 🐦 [There's more than 1000 devs using React Native at Microsoft](https://twitter.com/thymikee/status/1700100221940662684)
+- 🐦 [React-Native running natively on Apple Vision Pro simulator demo](https://twitter.com/o_kwasniewski/status/1701626162521190688)
+- 🧵 [React-Native EU Sketches](https://twitter.com/DelphineBugner/status/1700077346852622504)
+- 📜 [Expo Launch Party Recap](https://blog.expo.dev/expo-launch-party-recap-697d7b7739e8)
+- 📜 [Introducing E2E tests to React Native Core](https://www.callstack.com/blog/introducing-e2e-tests-to-react-native-core)
+- 📜 [Roadmap to Tauri 2.0 - The Mobile Update](https://beta.tauri.app/blog/roadmap-to-tauri-2-0/)
+- 📦 [Reanimated 3.5.0 - Windows/macOS support, createWorkletRuntime, reduceMotion...](https://github.com/software-mansion/react-native-reanimated/releases/tag/3.5.0)
+- 📦 [React-Native macOS 0.72](https://github.com/microsoft/react-native-macos/releases/tag/v0.72.0) https://twitter.com/SaadNajmi/status/1699996115972809011
+- 📦 [Stagger - Cross-platform React Native Stagger component](https://github.com/animate-react-native/stagger)
+- 📦 [Flame AI](https://github.com/infinitered/flame) + https://twitter.com/jamonholmgren/status/1700810574722953429
+- 📦 [React-Native-Skia - Font Manager, support for system and custom fonts](https://shopify.github.io/react-native-skia/docs/text/fonts/#system-fonts)
+- 📦 [react-native-secure-window - Hide react native views when capturing screen](https://github.com/bufgix/react-native-secure-window)
+- 📦 [Tamagui 1.62 - Zero config support](https://github.com/tamagui/tamagui/releases/tag/v1.62.0)
+- 🎙️ [React Native Radio 274 - React Native CI & Automated Deployments](https://reactnativeradio.com/episodes/rnr-274-react-native-ci-automated-deployments)
 
 <Todo />
 
@@ -85,7 +138,9 @@ It is super easy to install in your favorite framework: [React.js,](https://www
 
 ## 🇫🇷 En français {#fr}
 
-- [Du Web au Mobile avec Capacitor](https://yphil.gitlab.io/2023/07/16/dolores-fr/)
+- 📜 [Du Web au Mobile avec Capacitor](https://yphil.gitlab.io/2023/07/16/dolores-fr/)
+- 📜 [De Zig et des zags](https://linuxfr.org/news/de-zig-et-des-zags)
+- 🎥 [Bun v1.0 en production ? - Actus JS de la semaine](https://www.youtube.com/watch?v=WtDtOO7kyqE)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
@@ -101,23 +156,29 @@ It is super easy to install in your favorite framework: [React.js,](https://www
 
 ## 🔀 Autre {#other}
 
-[Bun 1.0](https://bun.sh/blog/bun-v1.0)
-
----
-
-- [Matteo Collina - My thoughts on Bun and other Adventures](https://adventures.nodeland.dev/archive/my-thoughts-on-bun/)
-- [Announcing native npm support on Deno Deploy](https://deno.com/blog/npm-on-deno-deploy)
-- [Your Cache Headers Could Probably be More Aggressive](https://www.macarthur.me/posts/more-aggressive-cache-headers)
-- [Are Big Projects Ditching TypeScript?](https://www.totaltypescript.com/are-big-projects-ditching-typescript)
-- [An Overview of 25+ UI Component Libraries in 2023](https://www.builder.io/blog/25-plus-ui-component-libraries)
-
-  <Todo />
+- 👀 [Node.js 16 End-of-Life](https://nodejs.org/en/blog/announcements/nodejs16-eol)
+- 📜 [Typescript Prevents Bad Things... and Good Things](https://kyleshevlin.com/typescript-prevents-bad-things-and-good-things)
+- 📜 [Announcing native npm support on Deno Deploy](https://deno.com/blog/npm-on-deno-deploy)
+- 📜 [Your Cache Headers Could Probably be More Aggressive](https://www.macarthur.me/posts/more-aggressive-cache-headers)
+- 📜 [Are Big Projects Ditching TypeScript?](https://www.totaltypescript.com/are-big-projects-ditching-typescript)
+- 📜 [An Overview of 25+ UI Component Libraries in 2023](https://www.builder.io/blog/25-plus-ui-component-libraries)
+- 📜 [Node.js vs. Deno vs. Bun: JavaScript runtime comparison](https://snyk.io/fr/blog/javascript-runtime-compare-node-deno-bun/)
+- 📜 [Vercel - Using Zig in our incremental Turborepo migration from Go to Rust](https://vercel.com/blog/how-we-continued-porting-turborepo-to-rust)
+- 📦 [New in Chrome 117 - Array grouping, CSS subgrid, transition-behavior...](https://developer.chrome.com/en/blog/new-in-chrome-117/)
+- 📦 [Skott - Devtool to analyze, search and visualize dependency graphs from JS, TS and Node.js](https://dev.to/antoinecoulon/introducing-skott-the-new-madge-1bfl)
+- 📦 [Vest 5.0 - Declarative validations framework](https://github.com/ealush/vest/releases/tag/vest%405.0.1)
 
 ---
 
 ## 🤭 Fun {#fun}
 
 https://twitter.com/erikras/status/1701658277807849487
+
+https://twitter.com/sebastienlorber/status/1701293733822541931
+
+https://twitter.com/Madisonkanna/status/1699422724571951451
+
+https://twitter.com/trashh_dev/status/1701626924572025132
 
 [![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
 
