--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/159/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/159/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /159
-title: "React Hebdo #159: ..."
+title: "React Hebdo #159: Bun, Static Hermes, Next.js, Redwood, Marz, React Aria Components, Next Nav, visionOS, Reanimated, Flame, Stagger, TypeScript, Tauri..."
 authors: [slorber]
 date: 09-13-2023
 unlisted: true
@@ -55,7 +55,7 @@ Bun est une toolchain complète pour JavaScript et TypeScript basée sur Webkit 
 
 La compatibilité avec les outils existants et le support mixte de ESM/CJS facilite l'adoption. Bun est généralement capable de faire tourner votre code existant tel quel, sans aucun changement (sinon, c'est [🐦 considéré comme un bug](https://twitter.com/jarredsumner/status/1700497869160268155)). Les frameworks React comme Next.js, Remix et Astro sont déjà supportés. L'utiliser en remplacement de npm/Yarn/pnpm ou Jest/Vitest est sans doute un bon point d'entrée et ne présente pas trop de risques.
 
-Autres liens intéressants liés à cette sortie:
+**Autres liens utiles:**
 
 - 📣 [Vercel - Bun install is now supported with zero configuration](https://vercel.com/changelog/bun-install-is-now-supported-with-zero-configuration)
 - 👀 [React-Native CLI PR - support Bun in init command](https://github.com/react-native-community/cli/pull/2073)
@@ -119,10 +119,10 @@ Pour permettre cela, il faut d'abord que TypeScript devienne un langage "sound".
 
 [![Static Hermes makes TypeScript sound](/emails/issues/159/hermes2.jpg)](https://speakerdeck.com/tmikov2023/static-hermes-react-native-eu-2023-announcement?slide=14)
 
-Autres liens utiles:
+**Autres liens utiles:**
 
-- 📜 [Static Hermes - How to speed up a micro-benchmark by 300x Without Cheating](https://tmikov.blogspot.com/2023/09/how-to-speed-up-micro-benchmark-300x.html)
-- 🐦 [Static Hermes has a plan to support Over-The-Air updates](https://twitter.com/mdj_dev/status/1700424775116493053)
+- 📜 [How to speed up a micro-benchmark by 300x without cheating](https://tmikov.blogspot.com/2023/09/how-to-speed-up-micro-benchmark-300x.html)
+- 🐦 [Plan to support Over-The-Air updates](https://twitter.com/mdj_dev/status/1700424775116493053)
 
 ---
 
@@ -132,7 +132,6 @@ Autres liens utiles:
 - 🧵 [React-Native EU Sketches](https://twitter.com/DelphineBugner/status/1700077346852622504)
 - 📜 [Introducing E2E tests to React Native Core](https://www.callstack.com/blog/introducing-e2e-tests-to-react-native-core)
 - 📜 [Expo Launch Party Recap](https://blog.expo.dev/expo-launch-party-recap-697d7b7739e8)
-- 📜 [Roadmap to Tauri 2.0 - The Mobile Update](https://beta.tauri.app/blog/roadmap-to-tauri-2-0/)
 - 📦 [React-Native macOS 0.72](https://github.com/microsoft/react-native-macos/releases/tag/v0.72.0)
 - 📦 [Reanimated 3.5.0 - Windows/macOS support, createWorkletRuntime, reduceMotion...](https://github.com/software-mansion/react-native-reanimated/releases/tag/3.5.0)
 - 📦 [Stagger - Cross-platform Reanimated stagger component](https://github.com/animate-react-native/stagger)
@@ -165,6 +164,7 @@ Autres liens utiles:
 ## 🔀 Autre {#other}
 
 - 👀 [Node.js 16 End-of-Life](https://nodejs.org/en/blog/announcements/nodejs16-eol)
+- 📜 [Roadmap to Tauri 2.0 - The Mobile Update](https://beta.tauri.app/blog/roadmap-to-tauri-2-0/)
 - 📜 [Typescript Prevents Bad Things... and Good Things](https://kyleshevlin.com/typescript-prevents-bad-things-and-good-things)
 - 📜 [Announcing native npm support on Deno Deploy](https://deno.com/blog/npm-on-deno-deploy)
 - 📜 [Your Cache Headers Could Probably be More Aggressive](https://www.macarthur.me/posts/more-aggressive-cache-headers)
