--- a/website/newsletter/158/index.mdx
+++ b/website/newsletter/158/index.mdx
@@ -5,7 +5,7 @@ authors: [slorber]
 date: 09-06-2023
 ---
 
-Salut à tous !
+Hi everyone!
 
 We're covering 2 weeks of news, including 2 great releases: Astro 3.0 and VisionCamera 3.0. There have also been a lot of interesting articles, so I've had to filter a bit!
 
