--- a/website/newsletter/159/index.mdx
+++ b/website/newsletter/159/index.mdx
@@ -6,11 +6,13 @@ date: 09-13-2023
 unlisted: true
 ---
 
-Cette semaine, les runtimes sont a l'honneur. On va bien sur parler de Bun et de Static Hermes.
+Hi everyone!
 
-Je vous épargne les débats agités sur Twitter cette semaine 😅 on va rester sur du positif.
+This week, the runtimes are in the spotlight. Of course, we'll be talking about Bun and Static Hermes.
 
-Pour les experts React, allez faire un tour à [React Advanced](https://reactadvanced.com/?utm_source=email&utm_medium=thisweekinreact) à Londres du 20 au 23 Octobre ([-10% - code "REACT10"](https://ti.to/gitnation/react-advanced-london-2023/discount/REACT10)).
+I'll spare you the heated debates on Twitter this week 😅 let's stick to positive vibes.
+
+For React experts, check out the [React Advanced](https://reactadvanced.com/?utm_source=email&utm_medium=thisweekinreact) conf in London from 20 to 23 October ([-10% - code "REACT10"](https://ti.to/gitnation/react-advanced-london-2023/discount/REACT10)).
 
 <!-- truncate -->
 
@@ -47,13 +49,13 @@ Unlock enterprise-grade features, functions, and UI components completely free f
 
 [**Bun 1.0**](https://bun.sh/blog/bun-v1.0)
 
-Impossible de passer à côté cette semaine: Bun vient de sortir en version 1.0 stable. Cette nouvelle n'est pas directement liée à React, mais elle affectera sans conteste notre écosystème au même titre que Node.js.
+It's impossible to miss it this week: Bun has just been released as stable v1.0. This news isn't directly related to React, but it will undoubtedly affect all React developers out there at some point.
 
-Bun est une toolchain complète pour JavaScript et TypeScript basée sur Webkit et écrite en Zig. Bun est une nouvelle alternative ultra rapide à tout un tas d'outils frontends qu'on utilise aujourd'hui: Node.js, npx, Babel, esbuild, swc, webpack, Jest, Vitest, npm, Yarn, pnpm...
+Bun is a complete toolchain for JavaScript and TypeScript based on Webkit and written in Zig. It is a new ultra-fast alternative to a whole host of front-end tools we use today: Node.js, npx, Babel, esbuild, swc, webpack, Jest, Vitest, npm, Yarn, pnpm... The benchmarks are super impressive and definitively real.
 
-La compatibilité avec les outils existants et le support mixte de ESM/CJS facilite l'adoption. Bun est généralement capable de faire tourner votre code existant tel quel, sans aucun changement (sinon, c'est [🐦 considéré comme un bug](https://twitter.com/jarredsumner/status/1700497869160268155)). Les frameworks React comme Next.js, Remix et Astro sont déjà supportés. L'utiliser en remplacement de npm/Yarn/pnpm ou Jest/Vitest est sans doute un bon point d'entrée et ne présente pas trop de risques.
+Its compatibility with the existing tools and its mixed ESM/CJS support make it quite easy to adopt as a drop-in replacement. Bun is generally able to run your code as is, without any changes (otherwise it's [🐦 considered a bug](https://twitter.com/jarredsumner/status/1700497869160268155)). React frameworks like Next.js, Remix and Astro are already supported. Using it as a replacement for npm/Yarn/pnpm or Jest/Vitest is probably a good entry point and not too risky.
 
-**Autres liens utiles:**
+**Other useful links:**
 
 - 📣 [Vercel - Bun install is now supported with zero configuration](https://vercel.com/changelog/bun-install-is-now-supported-with-zero-configuration)
 - 👀 [React-Native CLI PR - support Bun in init command](https://github.com/react-native-community/cli/pull/2073)
@@ -69,8 +71,8 @@ La compatibilité avec les outils existants et le support mixte de ESM/CJS facil
 
 - 💸 [Zero To Shipped - Master Fast-Paced Fullstack Development and **Finally** ship that product](https://www.zerotoshipped.com/)
 - 🐦 [Next.js - Redesigned console output](https://twitter.com/leeerob/status/1701775526459756620)
-- 👀 [RedwoodJS - Support for React Server Actions](https://community.redwoodjs.com/t/react-server-components-rsc/5081/7): support limité pour l'instant, il faut mettre les actions server dans un fichier séparé.
-- 👀 [React.gg](https://react.gg/) et [The Joy of React](https://www.joyofreact.com/): 2 cours React très attendus viennent de sortir!
+- 👀 [RedwoodJS - Support for React Server Actions](https://community.redwoodjs.com/t/react-server-components-rsc/5081/7): limited support for now, server actions need to be put in a separate file.
+- 👀 [React.gg](https://react.gg/) and [The Joy of React](https://www.joyofreact.com/): the 2 most eagerly awaited React courses have just been released!
 - 📜 [Next.js, just why?](https://pilcrow.vercel.app/blog/nextjs-why)
 - 📜 [Scaling frontend app teams using Relay](https://hasura.io/blog/scaling-frontend-app-teams-using-relay/)
 - 📜 [A Wide View of Automated Testing in React Apps](https://reacthandbook.dev/automated-testing)
@@ -109,15 +111,17 @@ It is super easy to install in your favorite framework: [React.js,](https://www
 
 [**Static Hermes**](https://speakerdeck.com/tmikov2023/static-hermes-react-native-eu-2023-announcement)
 
-Static Hermes a été annoncé à React-Native EU. Je n'y étais pas, alors j'essaie de vous expliquer ce que j'ai compris en lisant les slides, car la vidéo n'est pas encore sur Youtube.
+Static Hermes was announced at React-Native EU last week. I wasn't there, so I'm trying to explain what I understood by reading the slides, as the video isn't on YouTube yet.
 
-Static Hermes est un projet expérimental qui permet de compiler en option une partie de votre code TypeScript (ou Flow) en code natif. Cela permet d'obtenir des gains de performance significatifs (x10-20) comparé au fonctionnement normal d'Hermes qui interprète du bytecode. Cela permet aussi de s'intégrer facilement avec les APIs natives directement depuis votre code TypeScript (x15-80 plus rapide qu'un wrapper JSI).
+Static Hermes is an experimental project that allows you to optionally compile some of your TypeScript (or Flow) code into native code. This offers significant performance gains (x10-20) compared to Hermes usual mode based in bytecode interpretation. It also enables easy integration with native APIs directly from your TypeScript code (zero-cost FFI, x15-80 faster than a JSI wrapper).
 
-Pour permettre cela, il faut d'abord que TypeScript devienne un langage "sound". Static Hermes va modifier la sémantique de JavaScript pour s'assurer que le type déclaré match bien le type au runtime. Une idée très intéressante qui pourrait même avoir un jour un impact en dehors de l'écosystème React-Native? Ce slide explique bien le concept:
+To enable this, TypeScript must first become a "sound" language. Static Hermes will modify the semantics of JavaScript to ensure that the declared types matches the runtime types. This slide explains the concept well:
 
 [![Static Hermes makes TypeScript sound](/emails/issues/159/hermes2.jpg)](https://speakerdeck.com/tmikov2023/static-hermes-react-native-eu-2023-announcement?slide=14)
 
-**Autres liens utiles:**
+A very interesting idea that could maybe one day have an impact outside the React-Native ecosystem?
+
+**Other useful links:**
 
 - 📜 [How to speed up a micro-benchmark by 300x without cheating](https://tmikov.blogspot.com/2023/09/how-to-speed-up-micro-benchmark-300x.html)
 - 🐦 [Plan to support Over-The-Air updates](https://twitter.com/mdj_dev/status/1700424775116493053)
