--- a/website/newsletter/159/index.mdx
+++ b/website/newsletter/159/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /159
-title: "React Hebdo #159: Bun, Static Hermes, Next.js, Redwood, Marz, React Aria Components, Next Nav, visionOS, Reanimated, Flame, Stagger, TypeScript, Tauri..."
+title: "React Hebdo #159: Bun, Static Hermes, Next.js, Redwood, Marz, React Aria Components, Next Nav, visionOS, Reanimated, Flame, Stagger, Skia Fonts, TypeScript, Tauri..."
 authors: [slorber]
 date: 09-13-2023
 ---
