--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/160/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/160/index.mdx
@@ -35,6 +35,7 @@ Learn React.js from the ground up to advanced topics like performance, testing, 
 ## ⚛️ React {#react}
 
 <Todo />
+- [Ably Realtime Hackathon: $19,000 of prizes, two categories - realtime dashboards or collaboration experiences!](https://hubs.la/Q0225GBq0)
 - 👥 [reactjsday](https://2023.reactjsday.it/) (Verona 🇮🇹, Octobre 27) is offering us [-10% - code "media_TWIR"](https://ti.to/grusp/reactjsday-2023/discount/media_TWIR)
 - 👥 [React Advanced](https://reactadvanced.com/?utm_source=email&utm_medium=thisweekinreact) (London 🇬🇧, Octobre 20-23) is offering us [-10% - code "REACT10"](https://ti.to/gitnation/react-advanced-london-2023/discount/REACT10)
 
@@ -73,7 +74,15 @@ Use CoderPad to run fast, fair and real coding interviews that candidates and in
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
-<Todo />
+[![À l'abordage de React](/emails/issues/160/a-l-abordage-de-react.jpg)](https://react.codingcrew.dev/?utm_source=thisweekinreact&utm_id=twir-27092023)
+
+💸 **[🚀 Formation React approfondie et 100% FR (pré-vente) !](https://react.codingcrew.dev/?utm_source=thisweekinreact&utm_id=twir-27092023)**
+
+Découvrez "À l'abordage de React" en pré-vente à seulement 480 €, avec les deux premiers modules et un accès à vie aux autres modules lorsqu'ils sortiront.
+
+Notre plateforme interactive et immersive permet un apprentissage efficace et en profondeur de React en Français.
+
+Ouverture la semaine prochaine.
 
 ---
 
