--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/160/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/160/index.mdx
@@ -35,7 +35,8 @@ Learn React.js from the ground up to advanced topics like performance, testing, 
 ## ⚛️ React {#react}
 
 <Todo />
-- [Ably Realtime Hackathon: $19,000 of prizes, two categories - realtime dashboards or collaboration experiences!](https://hubs.la/Q0225GBq0)
+
+- 💸 [Ably Realtime Hackathon: $19,000 of prizes, two categories - realtime dashboards or collaboration experiences!](https://hubs.la/Q0225GBq0)
 - 👥 [reactjsday](https://2023.reactjsday.it/) (Verona 🇮🇹, Octobre 27) is offering us [-10% - code "media_TWIR"](https://ti.to/grusp/reactjsday-2023/discount/media_TWIR)
 - 👥 [React Advanced](https://reactadvanced.com/?utm_source=email&utm_medium=thisweekinreact) (London 🇬🇧, Octobre 20-23) is offering us [-10% - code "REACT10"](https://ti.to/gitnation/react-advanced-london-2023/discount/REACT10)
 
@@ -64,6 +65,7 @@ Use CoderPad to run fast, fair and real coding interviews that candidates and in
 ## 📱 React-Native {#react-native}
 
 <Todo />
+
 - 💸 [Blitz - Build React Native Apps Faster for iOS, Android, and Web!](https://www.blitz-rn.com/)
 
 ---
