--- a/website/newsletter/160/index.mdx
+++ b/website/newsletter/160/index.mdx
@@ -36,10 +36,9 @@ Learn React.js from the ground up to advanced topics like performance, testing, 
 
 <Todo />
 
-- 💸 [Ably Realtime Hackathon: $19,000 of prizes, two categories - realtime dashboards or collaboration experiences!](https://hubs.la/Q0225GBq0)
-- 👥 [reactjsday](https://2023.reactjsday.it/) (Verona 🇮🇹, Octobre 27) is offering us [-10% - code "media_TWIR"](https://ti.to/grusp/reactjsday-2023/discount/media_TWIR)
-- 👥 [React Advanced](https://reactadvanced.com/?utm_source=email&utm_medium=thisweekinreact) (London 🇬🇧, Octobre 20-23) is offering us [-10% - code "REACT10"](https://ti.to/gitnation/react-advanced-london-2023/discount/REACT10)
-
+- 💸 [Ably Realtime Hackathon - Create a real-time React app, win $19,000 in prizes - from real-time dashboards to collaborative experiences!](https://hubs.la/Q0225GBq0)
+-   👥 [reactjsday](https://2023.reactjsday.it/) (Verona 🇮🇹, Octobre 27) is offering us [\-10% - code "media\_TWIR"](https://ti.to/grusp/reactjsday-2023/discount/media_TWIR)
+-   👥 [React Advanced](https://reactadvanced.com/?utm_source=email&utm_medium=thisweekinreact) (London 🇬🇧, Octobre 20-23) is offering us [\-10% - code "REACT10"](https://ti.to/gitnation/react-advanced-london-2023/discount/REACT10)
 
 <SubscribeFormEmbed placement="middle" />
 
