Add eventId for fb ad deduplication

--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/160/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/160/index.mdx
@@ -34,11 +34,55 @@ Learn React.js from the ground up to advanced topics like performance, testing, 
 
 ## ⚛️ React {#react}
 
-<Todo />
+[Remix v2](https://remix.run/blog/remix-v2)
+
+https://twitter.com/remix_run/status/1702749787102085593
+
+[Vercel - Support for Remix v2](https://vercel.com/changelog/support-for-remix-v2)
+
+---
+
+[Next.js 13.5](https://nextjs.org/blog/next-13-5)
+
+https://twitter.com/vercel/status/1704190634091786441
+
+---
 
 - 💸 [Ably Realtime Hackathon: $19,000 of prizes, two categories - realtime dashboards or collaboration experiences!](https://hubs.la/Q0225GBq0)
-- 👥 [reactjsday](https://2023.reactjsday.it/) (Verone 🇮🇹, 27 Octobre) nous offre [\-10% - code "media\_TWIR"](https://ti.to/grusp/reactjsday-2023/discount/media_TWIR)
+- 🐦 ["StyleX documentation site is nearly ready for launch"](https://twitter.com/naman34/status/1703576411330810282)
+- React Forget? https://twitter.com/acemarke/status/1704875479725978018
+- Redwood conf? https://www.redwoodjsconf.com/
+- 👀 [Vercel v0 alpha - "Midjourney for React" - AI that generates React + shadcn UI + Tailwind code](https://v0.dev/) + opensource https://twitter.com/n_raidenai/status/1704226792985309198
+- 💡 [Await Component - Use Suspense without creating a new component](https://buildui.com/recipes/await-component)
+- 📜 [Abort Async Calls Inside Remix Loaders and Actions](https://sergiodxa.com/tutorials/abort-async-calls-inside-remix-loaders-and-actions)
+- 📜 [Build a server-side filter UI with Remix](https://www.jacobparis.com/content/remix-filter-bar): propose une solution complete et belle démo pour créer des filtres avancés
+- 📜 [Next.js vs. React Performance](https://rollbar.com/blog/next-js-vs-react-performance/)
+- 📜 [Exploring React Server Components and Server Actions with Next.js](https://www.antstack.com/blog/exploring-react-server-components-and-server-actions-with-next-js/)
+- 📜 [Storing React state in the URL with Next.js](https://francoisbest.com/posts/2023/storing-react-state-in-the-url-with-nextjs)
+- 📜 [The State of Web Frameworks on Deno](https://deno.com/blog/web-frameworks-on-deno): donne un bon aperçu des frameworks React qui peuvent être hébergés sur Deno Deploy. Le support Next.js est limité, mais Remix et Astro semblent bien supportés. Je découvre qu'ils ont migré leur doc vers Docusaurus 🥲.
+- 📜 [Speeding up the JavaScript ecosystem - Polyfills gone rogue](https://marvinh.dev/blog/speeding-up-javascript-ecosystem-part-6/): de nombreux plugins ESLint comme `eslint-plugin-react` ont beaucoup de dépendances inutiles.
+- 📜 [A First Look at HTMX and How it Compares to React](https://www.builder.io/blog/htmx-vs-react)
+- 📜 [React Server Components Made Our Site Faster](https://frigade.com/blog/bundle-size-reduction-with-rsc-and-frigade)
+- 📜 [A Guide to React Portals](https://semaphoreci.com/blog/react-portals) ???
+- 📜 [Building Low Level Components the Radix Way](https://alexkondov.com/building-low-level-components-the-radix-way/)
+- 📜 [Islands & Server Components & Resumability, Oh My!](https://dev.to/this-is-learning/islands-server-components-resumability-oh-my-319d) ???
+- 📜 [Create a text typing effect with React](https://www.julienthibeaut.xyz/blog/create-text-typing-effect-with-react)
+- 📜 [You really need to try Astro](https://pilcrow.vercel.app/blog/astro)
+- 📜 [How Whop improved their Real Experience Score by 200% with the Next.js App Router](https://vercel.com/customers/how-whop-improved-their-real-experience-score-by-200-with-the-next-js-app)
+- 📦 [Docusaurus v3 beta](https://github.com/facebook/docusaurus/discussions/9312)
+- 📦 [Remix DevTools v3](https://github.com/Code-Forge-Net/Remix-Dev-Tools/releases/tag/v3.0.0) + https://twitter.com/AlemTuzlak59192/status/1705619299673502178
+- 📦 [TanStack Query v5 RC](https://github.com/TanStack/query/releases/tag/v5.0.0-rc.1) + https://twitter.com/TkDodo/status/1706230945567646206
+- 📦 [Ladle v3 - Seamless alternative to Storybook](https://ladle.dev/blog/ladle-v3/) https://twitter.com/vmiksu/status/1704154849724506410
+- 📦 [Million v2.6](https://github.com/aidenybai/million/releases/tag/v2.6.0)
+- 📦 [MDX Editor v1.0 - A rich text editor React component for markdown](https://github.com/mdx-editor/editor)
+- 📦 [Mantine v7.0 - Fully featured React components library](https://mantine.dev/changelog/7-0-0/): entre autre usage de CSS natif à la place d'Emotion, ce qui permet le support Next.js App Directory.
+- 📦 [Sonner v1.0 - An opinionated toast component for React - RSC support](https://sonner.emilkowal.ski/)
+- 🎥 [Theo - React Wasn't Built For The Web](https://www.youtube.com/watch?v=Y12sGu8-qFE&t=2s)
+- 🎥 [Jack Herrington & Ben Holmes - Future Astro and React Advanced!](https://www.youtube.com/watch?v=sbiuZj2s5fs)
+- 🎥 [Lee Robinson - Using Forms in Next.js (Server Actions, Revalidating Data)](https://www.youtube.com/watch?v=dDpZfOQBMaU)
+- 👥 [reactjsday](https://2023.reactjsday.it/) (Verone 🇮🇹, 27 Octobre) nous offre [\-10% - code "media_TWIR"](https://ti.to/grusp/reactjsday-2023/discount/media_TWIR)
 - 👥 [React Advanced](https://reactadvanced.com/?utm_source=email&utm_medium=thisweekinreact) (Londres 🇬🇧, 20-23 Octobre) nous offre [\-10% - code "REACT10"](https://ti.to/gitnation/react-advanced-london-2023/discount/REACT10)
+- 👥 [Next.js Conf 2023](https://nextjs.org/conf): en ligne le 26 Octobre
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -63,15 +107,38 @@ Use CoderPad to run fast, fair and real coding interviews that candidates and in
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+[![Expo Router RFC - API Routes](/emails/issues/160/expo-api-routes.jpg)](https://blog.expo.dev/rfc-api-routes-cce5a3b9f25d)
+
+[**Expo Router RFC - API Routes**](https://blog.expo.dev/rfc-api-routes-cce5a3b9f25d)
+
+https://twitter.com/Baconbrix/status/1702026267384758657
+
+---
 
 - 💸 [Blitz - Build React Native Apps Faster for iOS, Android, and Web!](https://www.blitz-rn.com/)
+- 👀 [Expo - Support for Bun in EAS and Expo CLI](https://expo.dev/changelog/2023/09-25-eas-bun-support)
+- 📜 [5+ Github Actions to Automate Your React Native Workflow](https://elazizi.com/posts/5-github-actions-to-automate-your-react-native-workflow/)
+- 📜 [Comparing iOS rendering performance: SwiftUI vs. React Native vs. Flutter](https://blog.theodo.com/2023/09/ios-rendering-performance/)
+- 📦 [react-native-optimizer](https://github.com/marklawlor/react-native-optimizer): le POC de plugin Babel qui optimise React-Native en remplaçant les composants officiels Text/View par leurs composants natifs respectifs lorsque cela est possible. L'impact sur les performances pourrait bien être significatif! A suivre.
+- 📦 [react-native-menubar-extra - Easily add native MenuBar (NSMenu) to your React Native MacOS App](https://github.com/okwasniewski/react-native-menubar-extra)
+- 📦 [Victory Native XL - Charting library rewritten with React-Native-Skia](https://github.com/FormidableLabs/victory-native-xl)
+- [Level up React Native styles. A fresh take on StyleSheet API for adaptive layouts](https://www.reactnativecrossroads.com/posts/level-up-react-native-styles)
+- 📦 [VisionCamera v3.1](https://github.com/mrousavy/react-native-vision-camera/releases/tag/v3.1.0)
+- 📦 [React-Native v0.72.5 - Fix XCode 15 compat](https://github.com/facebook/react-native/releases/tag/v0.72.5)
+- 📦 [React Native Gesture Handler 2.13 - Universal Hover gesture, 𝚊𝚌𝚝𝚒𝚟𝚎𝙲𝚞𝚛𝚜𝚘𝚛 prop...](https://github.com/software-mansion/react-native-gesture-handler/releases/tag/2.13.0)
+- 🎥 ignite vid https://twitter.com/jamonholmgren/status/1704155112724464066
+- 🎥 [Static Hermes: the Next Generation of Hermes](https://www.youtube.com/watch?v=q-xKYA0EO-c)
+- 🎥 [React-Native EU 2023 - YouTube playlist](https://www.youtube.com/playlist?list=PLZ3MwD-soTTEm5KtB2AoZuM7fiYRR69k8)
+- 🎥 [React Native Podcast & React Native Radio cross-over - React Native news, insights & gossip](https://www.youtube.com/watch?v=xc15HtMuMhs)
+- 🎥 [Can it be done in React Native? - Telegram Dark Mode](https://www.youtube.com/watch?v=vKYEFpO06Tk)
+- 🎙️ [React Native Radio 275 - Recapping RN EU](https://reactnativeradio.com/episodes/rnr-275-recapping-rn-eu)
 
 ---
 
 ## 🇫🇷 En français {#fr}
 
-<Todo />
+- 🎥 [Arrête d'utiliser useContext pour tes states grâce à Zustand](https://www.youtube.com/watch?v=YMXN-t4jXbU)
+- 🎥 [10 erreurs de débutant avec useState](https://www.youtube.com/watch?v=XlaXX3dY6co)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
@@ -87,16 +154,47 @@ Notre plateforme **interactive** et **immersive** permet un apprentissage effica
 
 ## 🔀 Autre {#other}
 
-<Todo />
+- 🐦 [CSS `:has()` ships in Firefox 119 (beta) - Now supported in all browsers](https://twitter.com/sebastienlorber/status/1706976759269224724)
+- 👀 [Agenda for the 98th meeting of Ecma TC39 - 26-28 September](https://github.com/tc39/agendas/blob/main/2023/09.md#agenda-for-the-98th-meeting-of-ecma-tc39)
+- 📊 [State of HTML 2023 - Survey Open](https://survey.devographics.com/en-US/survey/state-of-html/2023)
+- 📜 [Upgrading frontend dependencies with confidence - visual regression testing](https://docusaurus.io/blog/upgrading-frontend-dependencies-with-confidence-using-visual-regression-testing)
+- 📜 [Bun hype. How we learned nothing from Yarn](https://dev.to/thejaredwilcurt/bun-hype-how-we-learned-nothing-from-yarn-2n3j)
+- 📜 [Bun: lessons from disrupting a tech ecosystem](https://blog.pragmaticengineer.com/bun-lessons-from-disrupting/)
+- 📜 [Svelte - Introducing runes](https://svelte.dev/blog/runes)
+- 📜 [One Thing Nobody Explained To You About TypeScript - Use one config per code layer](https://redd.one/blog/one-thing-nobody-explained-to-you-about-typescript)
+- 📜 [Get All That Network Activity Under Control with Priority Hints](https://www.macarthur.me/posts/priority-hints)
+- 📜 [Some notes on Local-First Development](https://bricolage.io/some-notes-on-local-first-development/)
+- 📜 [ESLint - Preparing your custom rules for v9](https://eslint.org/blog/2023/09/preparing-custom-rules-eslint-v9/)
+- 📦 [Safari 17.0 - CSS, search element, popover, storage API, Set operations, URL.canParse...](https://webkit.org/blog/14445/webkit-features-in-safari-17-0/)
+- 📦 [Lightning CSS v1.22](https://github.com/parcel-bundler/lightningcss/releases/tag/v1.22.0)
+- 📦 [Node.js v20.7](https://nodejs.org/es/blog/release/v20.7.0)
+- 🎥 [TypeScript Origins - The Documentary](https://www.youtube.com/watch?v=U6s2pdxebSo)
+- 🔗 [FirstIssue.dev - Make your next open-source contribution](https://firstissue.dev/)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+https://twitter.com/fireship_dev/status/1704879390000369689
+
+https://twitter.com/shadcn/status/1705619041237516733
+
+https://twitter.com/_jessicasachs/status/1706089010580578334
+
+https://twitter.com/bunjavascript/status/1701983259369087015
+
+https://twitter.com/natetronn/status/1702029379600269800
+
+https://twitter.com/brendonovichdev/status/1704875860787159439
+
+https://twitter.com/BHolmesDev/status/1704846748441534627
+
+https://twitter.com/richardiii/status/1704714908481556663
+
+https://twitter.com/mlrawlings/status/1704679858997993867
+
+https://twitter.com/fireship_dev/status/1703771606911533484
 
 [![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
-
-🤣 [Les autres tweets marrant cette semaine](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
 
 A plus 👋
