--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/160/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/160/index.mdx
@@ -3,12 +3,11 @@ slug: /160
 title: "React Hebdo #160: Remix, Next.js, Expo API Routes,Ladle, MDXEditor, Sonner, Docusaurus, AbortController, Query String, Menubar, VisionCamera, Victory Native XL, Bun, ESLint, TC39..."
 authors: [slorber]
 date: 09-27-2023
-unlisted: true
 ---
 
 Salut à tous !
 
-On rattrape 2 semaines de news cette semaine!
+Après une petite pause, on rattrape 2 semaines de news cette semaine!
 
 Il y a eu pas mal de sorties, dont Remix et Next.js mais aussi d'autres packages moins connus qui méritent tout de même votre attention.
 
