--- a/website/newsletter/160/index.mdx
+++ b/website/newsletter/160/index.mdx
@@ -1,14 +1,17 @@
 ---
 slug: /160
-title: "This Week In React #160: ..."
+title: "This Week In React #160: Remix, Next.js, Expo API Routes,Ladle, MDXEditor, Sonner, Docusaurus, AbortController, Query String, Menubar, VisionCamera, Victory Native XL, Bun, ESLint, TC39..."
 authors: [slorber]
 date: 09-27-2023
-unlisted: true
 ---
 
 Hi everyone!
 
-<Todo />
+After a little break, we're catching up on 2 weeks of news this week!
+
+There's been quite a few releases, including Remix and Next.js, but also some lesser-known packages that are well worth your attention.
+
+Super excited to see Expo finally venturing server-side!
 
 <!-- truncate -->
 
@@ -34,9 +37,53 @@ Learn React.js from the ground up to advanced topics like performance, testing, 
 
 ## ⚛️ React {#react}
 
-<Todo />
+[![Remix v2](/emails/issues/160/remix-v2.jpg)](https://remix.run/blog/remix-v2)
+
+[**Remix v2**](https://remix.run/blog/remix-v2)
+
+Comme prévu, Remix v2 devrait être une upgrade relativement simple puisque de nombreuses features v2 étaient déjà accessibles en option avec la v1 sous forme de "future flags". Cet article donne un aperçu de l'ensemble des feature flags qui ont été livrés en v1 et qui sont activés par défaut en v2. Remix propose aussi des packages de retro-compatibilité pou ceux qui préféraient les conventions v1. Le support React Server Component devrait arriver avec Remix v3.
+
+https://twitter.com/remix_run/status/1702749787102085593
+
+---
+
+[![Next.js 13.5](/emails/issues/160/next-13.5.jpg)](https://remix.run/blog/remix-v2)
+
+[**Next.js 13.5**](https://nextjs.org/blog/next-13-5)
+
+Beaucoup de devs se sont plaint des lenteurs du dev server Next.js dernièrement. Vercel nous a entendus, et propose une release qui améliore nettement les choses.
+
+https://twitter.com/vercel/status/1704190634091786441
+
+---
 
 - 💸 [Ably Realtime Hackathon - Create a real-time React app, win $19,000 in prizes - from real-time dashboards to collaborative experiences!](https://ably.devpost.com/?utm_campaign=23-hackathon&utm_source=thisweekinreact&utm_medium=referral)
+- 🐦 ["StyleX documentation site is nearly ready for launch"](https://twitter.com/naman34/status/1703576411330810282)
+- ❓ [Did the React team forget the React Forget compiler?](https://www.reddit.com/r/reactjs/comments/16nnh4z/did_the_react_team_forget_the_react_forget/): Joseph et Sathya répondent sur Reddit. Ils progressent et commencent à expérimenter en production. On en saura plus lors de React Advanced.
+- 👀 [Vercel v0 alpha - "Midjourney for React"](https://v0.dev/): Vercel propose en preview une AI impressionnante capable d'écrire des composants React basés sur shadcn UI et Tailwind, facile à copier/coller.
+- 💡 [Await Component - Use Suspense without creating a new component](https://buildui.com/recipes/await-component): une technique utile inspirée de Remix.
+- 📜 [Speeding up the JavaScript ecosystem - Polyfills gone rogue](https://marvinh.dev/blog/speeding-up-javascript-ecosystem-part-6/): de nombreux plugins ESLint comme `eslint-plugin-react` ont beaucoup de dépendances inutiles.
+- 📜 [The State of Web Frameworks on Deno](https://deno.com/blog/web-frameworks-on-deno): donne un bon aperçu des frameworks React qui peuvent être hébergés sur Deno Deploy. Le support Next.js est limité, mais Remix et Astro semblent bien supportés. Je découvre qu'ils ont migré leur doc vers Docusaurus 🥲.
+- 📜 [Abort Async Calls Inside Remix Loaders and Actions](https://sergiodxa.com/tutorials/abort-async-calls-inside-remix-loaders-and-actions): explique comment gérer correctement le AbortSignal reçu dans un loader Remix. Il y a quelques pièges à éviter.
+- 📜 [Build a server-side filter UI with Remix](https://www.jacobparis.com/content/remix-filter-bar): propose une solution complète et belle démo pour créer des filtres avancés inspirés de l'app Linear. Je découvre la spec OData qui définit comment sérialiser les filtres en query string.
+- 📜 [Storing React state in the URL with Next.js](https://francoisbest.com/posts/2023/storing-react-state-in-the-url-with-nextjs): article qui encourage à utiliser la query string via un package next-usequerystate. La v1.8 vient de sortir et supporte Next.js App Router. Partage aussi quelques détails que j'ignorais, comme le rate-limit sur les appels `replaceState`.
+- 📜 [Displaying Local Times in Next.js](https://francoisbest.com/posts/2023/displaying-local-times-in-nextjs): astuces pour éviter les problèmes de hydration mismatch.
+- 📜 [Islands & Server Components & Resumability, Oh My!](https://dev.to/this-is-learning/islands-server-components-resumability-oh-my-319d): les 3 approches sont orthogonales et pourraient converger?
+- 📜 [A First Look at HTMX and How it Compares to React](https://www.builder.io/blog/htmx-vs-react)
+- 📜 [React Server Components Made Our Site Faster](https://frigade.com/blog/bundle-size-reduction-with-rsc-and-frigade)
+- 📜 [Building Low Level Components the Radix Way](https://alexkondov.com/building-low-level-components-the-radix-way/)
+- 📜 [Exploring React Server Components and Server Actions with Next.js](https://www.antstack.com/blog/exploring-react-server-components-and-server-actions-with-next-js/)
+- 📦 [Ladle v3 - Uber seamless alternative to Storybook - SWC, Node 18, MDX stories...](https://ladle.dev/blog/ladle-v3/) https://twitter.com/vmiksu/status/1704154849724506410
+- 📦 [Docusaurus v3 beta - MDX 2, React 18, TypeScript 5, Mermaid 10](https://github.com/facebook/docusaurus/discussions/9312)
+- 📦 [TanStack Query v5 RC.1 - Last call to report bugs](https://github.com/TanStack/query/releases/tag/v5.0.0-rc.1) + https://twitter.com/TkDodo/status/1706230945567646206
+- 📦 [Million v2.6 - HMR fixes, Million CLI, better pre-evaluation](https://github.com/aidenybai/million/releases/tag/v2.6.0)
+- 📦 [Mantine v7.0 - Fully featured React components library - Native CSS, App Router support](https://mantine.dev/changelog/7-0-0/)
+- 📦 [MDX Editor v1.0 - A rich text editor React component for markdown](https://github.com/mdx-editor/editor)
+- 📦 [Sonner v1.0 - An opinionated toast component for React - RSC support](https://sonner.emilkowal.ski/)
+- 📦 [Remix DevTools v3 - Remix v2 support, ESM, new dev server](https://github.com/Code-Forge-Net/Remix-Dev-Tools/releases/tag/v3.0.0) + https://twitter.com/AlemTuzlak59192/status/1705619299673502178
+- 🎥 [Theo - React Wasn't Built For The Web](https://www.youtube.com/watch?v=Y12sGu8-qFE&t=2s)
+- 🎥 [Jack Herrington & Ben Holmes - Future Astro and React Advanced!](https://www.youtube.com/watch?v=sbiuZj2s5fs)
+- 🎥 [Lee Robinson - Using Forms in Next.js (Server Actions, Revalidating Data)](https://www.youtube.com/watch?v=dDpZfOQBMaU)
 - 👥 [reactjsday](https://2023.reactjsday.it/) (Verona 🇮🇹, Octobre 27) is offering us [\-10% - code "media_TWIR"](https://ti.to/grusp/reactjsday-2023/discount/media_TWIR)
 - 👥 [React Advanced](https://reactadvanced.com/?utm_source=email&utm_medium=thisweekinreact) (London 🇬🇧, Octobre 20-23) is offering us [\-10% - code "REACT10"](https://ti.to/gitnation/react-advanced-london-2023/discount/REACT10)
 - 👥 [Next.js Conf](https://nextjs.org/conf): online, 26th of October
@@ -64,24 +111,54 @@ Use CoderPad to run fast, fair and real coding interviews that candidates and in
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+[![Expo Router RFC - API Routes](/emails/issues/160/expo-api-routes.jpg)](https://blog.expo.dev/rfc-api-routes-cce5a3b9f25d)
+
+[**Expo Router RFC - API Routes**](https://blog.expo.dev/rfc-api-routes-cce5a3b9f25d)
+
+Nouvelle que j'attendais avec impatience! Expo se lance dans les features coté server en proposant de déployer des API Routes via une convention Expo Router. Vous pouvez déployer ces routes vous-même, mais on se doute bien qu'à terme le but est de proposer un hébergement sur EAS.
+
+C'est le début d'une nouvelle ère pour Expo. Après avoir résolu le problème du mobile natif, il est maintenant temps de faire du cross-platform une réalité mainstream en comblant les lacunes du support web avec un support Server Side Rendering et React Server Components.
+
+https://twitter.com/Baconbrix/status/1702026267384758657
+
+---
 
 - 💸 [Blitz - Build React Native Apps Faster for iOS, Android, and Web!](https://www.blitz-rn.com/)
+- 👀 [Expo - Support for Bun in EAS and Expo CLI](https://expo.dev/changelog/2023/09-25-eas-bun-support)
+- 📜 [Level up React Native styles. A fresh take on StyleSheet API for adaptive layouts](https://www.reactnativecrossroads.com/posts/level-up-react-native-styles)
+- 📜 [5+ Github Actions to Automate Your React Native Workflow](https://elazizi.com/posts/5-github-actions-to-automate-your-react-native-workflow/)
+- 📜 [Comparing iOS rendering performance: SwiftUI vs. React Native vs. Flutter](https://blog.theodo.com/2023/09/ios-rendering-performance/)
+- 📦 [React Native v0.72.5 - Fix XCode 15 compat](https://github.com/facebook/react-native/releases/tag/v0.72.5)
+- 📦 [React Native Menubar Extra - Easily add native MenuBar (NSMenu) to your React Native MacOS App](https://github.com/okwasniewski/react-native-menubar-extra)
+- 📦 [Victory Native XL - Charting library - Faster, rewritten with React-Native-Skia](https://github.com/FormidableLabs/victory-native-xl)
+- 📦 [React Native VisionCamera v3.1 - useCameraDevice, useCameraFormat, useCameraPermission, resizeMode ...](https://github.com/mrousavy/react-native-vision-camera/releases/tag/v3.1.0)
+- 📦 [React Native Gesture Handler 2.13 - Universal Hover gesture, 𝚊𝚌𝚝𝚒𝚟𝚎𝙲𝚞𝚛𝚜𝚘𝚛 prop](https://github.com/software-mansion/react-native-gesture-handler/releases/tag/2.13.0)
+- 🎥 [React Native EU 2023 - YouTube playlist](https://www.youtube.com/playlist?list=PLZ3MwD-soTTEm5KtB2AoZuM7fiYRR69k8)
+- 🎥 [Static Hermes: the Next Generation of Hermes - Tzvetan Mikov](https://www.youtube.com/watch?v=q-xKYA0EO-c)
+- 🎥 [React Native Podcast & React Native Radio cross-over - React Native news, insights & gossip](https://www.youtube.com/watch?v=xc15HtMuMhs)
+- 🎥 [Can it be done in React Native? - Telegram Dark Mode](https://www.youtube.com/watch?v=vKYEFpO06Tk)
+- 🎙️ [React Native Radio 275 - Recapping RN EU](https://reactnativeradio.com/episodes/rnr-275-recapping-rn-eu)
 
 ---
 
 ## 🔀 Other {#other}
 
-<Todo />
+- 🐦 [CSS `:has()` ships in Firefox 119 (beta) - Now supported in all browsers](https://twitter.com/sebastienlorber/status/1706976759269224724)
+- 👀 [Agenda for the 98th meeting of Ecma TC39 - 26-28 September](https://github.com/tc39/agendas/blob/main/2023/09.md#agenda-for-the-98th-meeting-of-ecma-tc39)
+- 📊 [State of HTML 2023 - Survey Open](https://survey.devographics.com/en-US/survey/state-of-html/2023)
+- 📜 [Svelte - Introducing runes](https://svelte.dev/blog/runes)
+- 📜 [Bun hype. How we learned nothing from Yarn](https://dev.to/thejaredwilcurt/bun-hype-how-we-learned-nothing-from-yarn-2n3j)
+- 📜 [Bun: lessons from disrupting a tech ecosystem](https://blog.pragmaticengineer.com/bun-lessons-from-disrupting/)
+- 📜 [One Thing Nobody Explained To You About TypeScript](https://redd.one/blog/one-thing-nobody-explained-to-you-about-typescript)
+- 📜 [ESLint - Preparing your custom rules for v9](https://eslint.org/blog/2023/09/preparing-custom-rules-eslint-v9/)
+- 📦 [Safari 17.0 - CSS, search element, popover, storage API, Set operations, URL.canParse...](https://webkit.org/blog/14445/webkit-features-in-safari-17-0/)
+- 🎥 [TypeScript Origins - The Documentary](https://www.youtube.com/watch?v=U6s2pdxebSo)
+- 🔗 [FirstIssue.dev - Make your next open-source contribution](https://firstissue.dev/)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
-
-[![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
-
-🤣 [Other funny tweets this week](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![alt](/emails/issues/160/meme.jpg)](https://twitter.com/HODLFrance/status/1704507457555284348)
 
 See ya! 👋
